welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: type mismatch;
 found   : Unit
 required: Int
  s=s/nums.length
   ^